kube-yaml/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prova
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
