kube-yaml/simpleapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simpleapp
    environment: exemplo
  name: simpleapp
  namespace: prova
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleapp
      environment: exemplo
  template:
    metadata:
      labels:
        app: simpleapp
        environment: exemplo
    spec:
      containers:
        - name: simpleapp
          image: masterfocus/simpleapp:v0.0.1
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
