kube-yaml/simpleapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp-svc
  namespace: prova
  labels:
    app: simpleapp
    environment: exemplo
spec:
  type: ClusterIP
  selector:
    app: simpleapp
    environment: exemplo
  ports:
    - port: 80
      targetPort: 80
