kube-yaml/challenge-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapp-ingress
  namespace: prova
spec:
  rules:
  - host: app.prova
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: simpleapp-svc
            port:
              number: 80
#  - host: kibana.prova
#    http:
#      paths:
#      - pathType: Prefix
#        path: /
#        backend:
#          service:
#            name: kibana-kibana
#            port:
#              number: 5601
